Diseño de pantallas de reconocimiento, y añadir dependencias y archivos necesarios de firebase y ML Kit

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
         <activity android:name=".RecognizeGallery"></activity>
         <activity android:name=".RecognizeCamera" />
         <activity android:name=".MainActivity">
+            <meta-data
+                android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+                android:value="ocr" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
