--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <activity android:name=".RecognizeCamera" />
         <activity android:name=".MainActivity">
             <meta-data
-                android:name="com.google.firebase.ml.vision.DEPENDENCIES"
+                android:name="com.google.mlkit.vision.DEPENDENCIES"
                 android:value="ocr" />
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
